--- a/src/componentes/login.css
+++ b/src/componentes/login.css
@@ -4,9 +4,10 @@
   padding: 2.5rem;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
   max-width: 400px;
-  margin: auto;
+  margin: 60px auto auto auto; /* margen superior de 60px */
   text-align: center;
 }
+
 
 .logito {
   width: 80px;
